docs/assets/javascript/elements/uxdot-sidenav-lightdom.css
uxdot-sidenav {
  --_padding-start: var(--uxdot-sidenav-padding-start, var(--rh-space-2xl, 32px));
  --_padding-end: var(--uxdot-sidenav-padding-end, var(--rh-space-2xl, 32px));
  --_max-height: 100dvh;

  width: 100%;
  height: var(--_max-height);
  top: 0;
  z-index: var(--uxdot-sidenav-z-index, 2);
}

uxdot-sidenav:not(:defined) {
  --uxdot-sidenav-z-index: 1;

  height: fit-content;
  overflow-y: scroll;
  position: relative;
  top: var(--uxdot-masthead-max-height, 72px);
  width: 100%;
}

uxdot-sidenav:defined:not([open]) {
  display: none;
}

uxdot-sidenav > ul {
  padding-inline: 0;
  padding-block-start: var(--_padding-start);
  padding-block-end: var(--_padding-end);
  list-style: none;
  margin-block: 0;
  height: var(--_max-height);
  overflow-y: scroll;
  background-color: var(--rh-color-surface-lightest, #ffffff);
}

uxdot-sidenav-item {
  display: block;
}

uxdot-sidenav-item > a {
  display: block;
}

uxdot-sidenav-dropdown > details > summary {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
}

uxdot-sidenav-item,
uxdot-sidenav-dropdown > details > summary,
uxdot-sidenav-dropdown-menu-item > a {
  border-inline-start:
    var(--rh-border-width-lg, 3px)
    solid
    transparent;
}

uxdot-sidenav-dropdown-menu-item > a {
  font-size: var(--rh-font-size-body-text-md, 1rem);
}

uxdot-sidenav-dropdown-menu > ul {
  margin: 0;
  list-style: none;
  padding-inline-start: var(--rh-space-2xl, 32px);
}

uxdot-sidenav-dropdown-menu > ul > li {
  margin-block: 0;
}

uxdot-sidenav:not(:defined) > ul {
  height: auto;
}

uxdot-sidenav-dropdown > details > summary::-webkit-details-marker {
  display: none;
}

uxdot-sidenav-item > a,
uxdot-sidenav-dropdown > details > summary {
  text-decoration: none;
  color: var(--rh-color-text-primary-on-light, #151515);
  font-size: var(--rh-font-size-body-text-lg, 1.125rem);
  padding: var(--rh-space-lg, 16px) var(--rh-space-2xl, 32px);
}

uxdot-sidenav-item:hover,
uxdot-sidenav-dropdown > details > summary:hover,
uxdot-sidenav-dropdown > details[open] > summary:focus,
uxdot-sidenav-dropdown > details[open] > summary:hover {
  background: var(--rh-color-surface-lighter, #f2f2f2);
  border-inline-start-color: var(--rh-color-border-subtle-on-light, #c7c7c7);
}

uxdot-sidenav-dropdown > details > summary:after {
  content: "";
  color: var(--rh-color-text-primary-on-light, #151515);
  width: 9px;
  height: 9px;
  transform: rotate(45deg);
  border-right:
    var(--rh-border-width-lg, 3px)
    solid
    var(--rh-color-border-strong-on-light, #151515);
  border-top:
    var(--rh-border-width-lg, 3px)
    solid
    var(--rh-color-border-strong-on-light, #151515);
}

uxdot-sidenav-dropdown > details[open] > summary:after {
  transform: rotate(135deg);
}

uxdot-sidenav-dropdown-menu-item > a {
  display: inline-block;
  padding: var(--rh-space-md, 8px) 0 var(--rh-space-md, 8px) var(--rh-space-lg, 16px);
  width: 100%;
}

uxdot-sidenav-item[active],
uxdot-sidenav-dropdown-menu-item[active] > a {
  background: var(--rh-color-surface-lighter, #f2f2f2);
  border-inline-start-color: var(--rh-color-accent-brand-on-light, #ee0000);
}

uxdot-sidenav-item > a,
uxdot-sidenav-dropdown-menu-item > a {
  text-decoration: none;
  color: var(--rh-color-text-primary-on-light, #151515);
}

uxdot-sidenav-item > a:hover,
uxdot-sidenav-dropdown-menu-item > a:hover {
  background: var(--rh-color-surface-lighter, #f2f2f2);
  border-inline-start-color: var(--rh-color-border-subtle-on-light, #c7c7c7);
}

@media (min-width: 320px) {
  uxdot-sidenav {
    --uxdot-sidenav-width: 320px;

    width: var(--uxdot-sidenav-width);
    box-shadow: var(--rh-box-shadow-lg, 0 6px 8px 2px rgba(21, 21, 21, 0.3));
  }
}

@media (min-width: 992px) {
  uxdot-sidenav {
    --uxdot-siznav-z-index: 1;

    position: fixed;
    top: var(--uxdot-masthead-max-height, 72px);
    height: calc(var(--_max-height) - var(--uxdot-masthead-max-height, 72px));
    box-shadow: unset;
  }

  uxdot-sidenav:not(:defined) {
    height: var(--_max-height);
    box-shadow: unset;
  }

  uxdot-sidenav:defined:not([open]) {
    display: block;
  }
}

